# a2discord

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
a2discord/: __init__.py
a2discord/adapter/: __init__.py
a2discord/interactions/: __init__.py
a2discord/rendering/: __init__.py
a2discord/sample/: __init__.py
catalog/: discord_catalog.json
docs/: A2UI-MAPPING.md  DECISIONS.md  DESIGN.md  DEVELOPER_GUIDE.md  DEVELOPER_LOOP_EXAMPLE.md  END_TO_END_WALKTHROUGH.md  ROADMAP.md  USER_GUIDE.md
src/: index.ts  types.ts
src/adapter/: client.ts  config.ts  index.ts
src/rendering/: a2ui-renderer.ts  discord-catalog.ts  index.ts
src/sample/: demo-bot.ts
tests/: README.md
tests/e2e/: harness.ts  live-test.ts  quiz-demo.ts  smoke-connect.ts  smoke-connect2.ts  smoke-send.ts
tests/e2e/scenarios/: authorize.ts  basic-echo.ts  collect.ts  error-handling.ts  streaming.ts
tests/fixtures/: mock-a2a-server.ts
tests/helpers/: a2a-fixtures.ts  assertions.ts  discord-mocks.ts  setup.ts
tests/integration/: a2h-patterns.test.ts  task-lifecycle.test.ts
tests/unit/: a2ui-renderer.test.ts  adapter.test.ts  client.test.ts  protocol.test.ts  rendering.test.ts
