[project]
name = "a2discord"
version = "0.1.0"
description = "Discord adapter for A2A agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.5",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
]
sample = [
    "google-adk>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
